test/descriptor/seman/corr08.v3
//@seman = DescriptorError @ 3:20
class D1 describes A { }
class D2 describes A { }  // error: A is already described by D1
class A descriptor D1 { }
